examples/test/testpolicy13231.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13231
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key42: value4
      key12: value0
      key19: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value43
          key29: value38
      podSelector:
        matchLabels:
          key2: value37
          key20: value29
